Added base kanban component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,10 @@
 // #region Components
 @import "./app/fields.theme.scss";
 // #enregion Components
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
