--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -17,6 +17,13 @@
                     <div *cdkVirtualFor="let card of cardList; trackBy: cardTrackBy" class="vs-kanban-card" cdkDrag
                         [cdkDragStartDelay]="cardDragDelay" [cdkDragData]="'cdkDragData'" cdkDragBoundary=".board"
                         [ngClass]="{'draggable': true}">
+                        <ng-container *ngIf="cardDragPlaceholderTemplate">
+                            <div class="vs-kanban-placeholder" *cdkDragPlaceholder>
+                                <ng-template [ngTemplateOutlet]="cardDragPlaceholderTemplate"
+                                    [ngTemplateOutletContext]="{card: card}">
+                                </ng-template>
+                            </div>
+                        </ng-container>
                         <div class="vs-kanban-header">
                             <ng-template [ngTemplateOutlet]="cardHeaderTemplate || cardHeaderDefaultTemplate"
                                 [ngTemplateOutletContext]="{title: 'Card 1'}"></ng-template>
@@ -45,6 +52,7 @@
 <ng-template #listHeaderDefaultTemplate let-list="list">
     <div class="vs-kanban-list-header">
         <h3 class="vs-kanban-info">
+            <mat-icon *ngIf="list.icon">{{list.icon}}</mat-icon>
             {{list.title}}
         </h3>
         <div *ngIf="list.hasAddAction || list.hasDeleteAction">
