--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,13 @@
 <app-kanban [lists]="kanbanList" [headerTemplate]="headerTemplate" [cardHeaderTemplate]="cardHeaderTemplate"
   [cardBodyTemplate]="cardBodyTemplate" [cardFooterTemplate]="cardFooterTemplate"
   [listHeaderTemplate]="listHeaderTemplate" [listFooterTemplate]="listFooterTemplate" [footerTemplate]="footerTemplate"
-  [cardSize]="70">
+  [cardSize]="70" [cardDragPlaceholderTemplate]="cardDragPlaceholderTemplate">
 </app-kanban>
-
-<!-- <ng-template #headerTemplate>
-  meu header
-</ng-template>
-<ng-template #footerTemplate>
-  meu footer
-</ng-template>
-<ng-template #listHeaderTemplate let-list="list">
-  meu listHeader da lista {{list.title}}
-</ng-template>
-<ng-template #listFooterTemplate let-list="list">
-  meu listFooter da lista {{list.title}}
-</ng-template>
-<ng-template #cardHeaderTemplate>
-  meu cardHeader
-</ng-template>
-<ng-template #cardBodyTemplate>
-  meu cardBody
-</ng-template>
-<ng-template #cardFooterTemplate>
-  meu cardFooter
-</ng-template> -->
+<ng-template #cardDragPlaceholderTemplate let-card="card"> meu card placeholder </ng-template>
+<ng-template #headerTemplate> meu header </ng-template>
+<ng-template #footerTemplate> meu footer </ng-template>
+<ng-template #listHeaderTemplate let-list="list"> meu listHeader da lista {{list.title}} </ng-template>
+<ng-template #listFooterTemplate let-list="list"> meu listFooter da lista {{list.title}} </ng-template>
+<ng-template #cardHeaderTemplate> meu cardHeader </ng-template>
+<ng-template #cardBodyTemplate> meu cardBody </ng-template>
+<ng-template #cardFooterTemplate> meu cardFooter </ng-template>
