--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -26,14 +26,15 @@
                         </ng-container>
                         <div class="vs-kanban-header">
                             <ng-template [ngTemplateOutlet]="cardHeaderTemplate || cardHeaderDefaultTemplate"
-                                [ngTemplateOutletContext]="{title: 'Card 1'}"></ng-template>
+                                [ngTemplateOutletContext]="{card: card}"></ng-template>
                         </div>
                         <div class="vs-kanban-body">
                             <ng-template [ngTemplateOutlet]="cardBodyTemplate || cardBodyDefaultTemplate"
-                                [ngTemplateOutletContext]="{description: 'Description 1'}"></ng-template>
+                                [ngTemplateOutletContext]="{card: card}"></ng-template>
                         </div>
                         <div *ngIf="cardFooterTemplate" class="vs-kanban-footer">
-                            <ng-template [ngTemplateOutlet]="cardFooterTemplate"></ng-template>
+                            <ng-template [ngTemplateOutlet]="cardFooterTemplate"
+                                [ngTemplateOutletContext]="{card: card}"></ng-template>
                         </div>
                     </div>
                 </cdk-virtual-scroll-viewport>
@@ -65,5 +66,5 @@
         </div>
     </div>
 </ng-template>
-<ng-template #cardHeaderDefaultTemplate let-title="title">{{title}}</ng-template>
-<ng-template #cardBodyDefaultTemplate let-description="description">{{description}}</ng-template>
+<ng-template #cardHeaderDefaultTemplate let-card="card">{{card}}</ng-template>
+<ng-template #cardBodyDefaultTemplate let-card="card">{{card}}</ng-template>
