--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -3,9 +3,9 @@
   height: 100%;
 }
 
-// #region Board
 $board-padding: 8px;
 $board-bakground-color: #e5e7e8;
+$list-border-color: #cacaca;
 .vs-kanban-board {
   display: flex;
   flex: auto;
@@ -25,16 +25,9 @@ $board-bakground-color: #e5e7e8;
     flex: auto;
   }
 }
-// #endregion Board
 
-// #region List
-$list-container-gap: 10px;
 $list-min-width: 250px;
-$list-background-color: #eef0f2;
-$list-border-radius: 2px;
-$list-border-color: #cacaca;
-$list-header-internal-gap: 6px 8px 0 16px;
-$list-footer-internal-gap: 0 8px 6px 16px;
+$list-container-gap: 10px;
 .vs-kanban-list-container {
   display: flex;
   flex: auto;
@@ -46,95 +39,10 @@ $list-footer-internal-gap: 0 8px 6px 16px;
     padding-left: $list-container-gap;
     padding-right: $list-container-gap;
   }
-  .vs-kanban-list {
-    display: flex;
-    flex: auto;
-    flex-direction: column;
-    height: 100%;
-    max-height: 100%;
-    overflow-y: auto;
-    background-color: $list-background-color;
-    color: #000;
-    border-radius: $list-border-radius;
-
-    > .vs-kanban-header {
-      display: flex;
-      flex: initial;
-      padding: $list-header-internal-gap;
-    }
-
-    > .vs-kanban-content {
-      display: flex;
-      flex: auto;
-      flex-direction: column;
-      > .vs-kanban-no-content {
-      }
-    }
-
-    > .vs-kanban-footer {
-      display: flex;
-      flex: initial;
-      padding: $list-footer-internal-gap;
-    }
+  vs-kanban-list {
+    min-width: $list-min-width;
   }
 }
-// #endregion List
-
-// #region Card
-$card-vertical-gap: 6px; // CRM <= 5
-$card-internal-gap: 8px;
-$card-background-color: #fff;
-$card-color: #000;
-$card-box-shadown: 5px 5px 15px 0px #aaa;
-$card-border-radius: 4px;
-.vs-kanban-card {
-  margin-top: $card-vertical-gap;
-  // TODO - Check value
-  z-index: 5;
-
-  position: relative;
-  background-color: $card-background-color;
-  color: $card-color;
-  border-radius: $card-border-radius;
-  padding: $card-internal-gap;
-  // transition: box-shadow 150ms ease;
-  > .vs-kanban-header {
-  }
-
-  > .vs-kanban-body {
-  }
-
-  > .vs-kanban-footer {
-  }
-}
-.vs-kanban-card.vs-kanban-cdk-drag-dragging {
-  padding: 0;
-}
-.vs-kanban-card.cdk-drag-preview {
-  border: 1px solid #dcdcdc;
-  -webkit-box-shadow: $card-box-shadown;
-  -moz-box-shadow: $card-box-shadown;
-  box-shadow: $card-box-shadown;
-}
-// #endregion Card
-
-// #region Header List
-.vs-kanban-list-header {
-  display: flex;
-  flex-flow: row wrap;
-  flex: auto;
-  .vs-kanban-info {
-    display: flex;
-    flex: auto;
-    align-items: center;
-    margin: 0;
-  }
-  .vs-kanban-actions {
-    display: flex;
-    flex: initial;
-  }
-}
-// #endregion Header List
 
 // #region Animations
 // Card sort animation
@@ -142,8 +50,8 @@ $card-border-radius: 4px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 // Card drop animation
-// .vs-kanban-cdk-drag-animating {
-//   transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
-// }
+.vs-kanban-cdk-drag-animating {
+  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
+}
 
 // #endregion Animations
