Some changes added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <vs-kanban [lists]="kanbanList" [service]="service" [headerTemplate]="headerTemplate"
   [cardHeaderTemplate]="cardHeaderTemplate" [cardBodyTemplate]="cardBodyTemplate"
   [cardFooterTemplate]="cardFooterTemplate" [listHeaderTemplate]="listHeaderTemplate"
-  [listFooterTemplate]="listFooterTemplate" [footerTemplate]="footerTemplate" [cardSize]="30"
-  [cardDragPlaceholderTemplate]="cardDragPlaceholderTemplate">
+  [listFooterTemplate]="listFooterTemplate" [footerTemplate]="footerTemplate" [cardSize]="48"
+  [cardDragPlaceholderTemplate]="cardDragPlaceholderTemplate" [pageSize]="5">
 </vs-kanban>
 <!-- <ng-template #cardDragPlaceholderTemplate let-card="card"> meu card placeholder </ng-template>
 <ng-template #headerTemplate> meu header </ng-template>
