--- a/src/app/kanban/kanban-list/kanban-list.component.html
+++ b/src/app/kanban/kanban-list/kanban-list.component.html
@@ -18,7 +18,7 @@
     </vs-kanban-card>
   </div>
 </cdk-virtual-scroll-viewport>
-<div *ngIf="isLoading">
+<div *ngIf="isLoading" class="vs-kanban-loading">
   Loading...
 </div>
 <div *ngIf="listFooterTemplate" class="vs-kanban-footer">
