--- a/src/app/kanban/kanban-list/kanban-list.component.scss
+++ b/src/app/kanban/kanban-list/kanban-list.component.scss
@@ -4,7 +4,6 @@ $list-border-radius: 2px;
 $list-border-color: #cacaca;
 $list-header-internal-gap: 6px 8px 0 16px;
 $list-footer-internal-gap: 0 8px 6px 16px;
-
 vs-kanban-list {
   display: flex;
   flex: auto;
@@ -40,9 +39,29 @@ vs-kanban-list {
     flex: initial;
     padding: $list-footer-internal-gap;
   }
-}
 
-// #region Header List
+  // #region Header List
+  .vs-kanban-list-header {
+    display: flex;
+    flex-flow: row wrap;
+    flex: auto;
+    .vs-kanban-info {
+      display: flex;
+      flex: auto;
+      align-items: center;
+      margin: 0;
+      cursor: context-menu;
+      > vs-icon[model="aux_title"]:first-of-type {
+        padding: 2px;
+      }
+    }
+    .vs-kanban-actions {
+      display: flex;
+      flex: initial;
+    }
+  }
+  // #endregion Header List
+}
 .vs-kanban-list-header {
   display: flex;
   flex-flow: row wrap;
