--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -1,57 +1,56 @@
-:host {
+vs-kanban {
   display: flex;
   height: 100%;
-}
 
-$board-padding: 8px;
-$board-bakground-color: #e5e7e8;
-$list-border-color: #cacaca;
-.vs-kanban-board {
-  display: flex;
-  flex: auto;
-  flex-direction: column;
-  background: $board-bakground-color;
-  overflow-x: auto;
-  padding: $board-padding 0 $board-padding $board-padding;
-
-  > .vs-kanban-header,
-  > .vs-kanban-footer {
+  $board-padding: 8px;
+  $board-bakground-color: #e5e7e8;
+  $list-border-color: #cacaca;
+  > .board {
     display: flex;
-    flex: initial;
-  }
-  > .vs-kanban-list-wrapper {
-    display: flex;
-    flex-direction: row;
     flex: auto;
-  }
-}
+    flex-direction: column;
+    background: $board-bakground-color;
+    overflow-x: auto;
+    padding: $board-padding 0 $board-padding $board-padding;
 
-$list-min-width: 250px;
-$list-container-gap: 10px;
-.vs-kanban-list-container {
-  display: flex;
-  flex: auto;
-  min-width: $list-min-width;
-  padding-right: $list-container-gap;
-  // todo check with header
-  &:not(:first-of-type) {
-    border-left: 2px dashed $list-border-color;
-    padding-left: $list-container-gap;
-    padding-right: $list-container-gap;
-  }
-  vs-kanban-list {
-    min-width: $list-min-width;
-  }
-}
+    > .header,
+    > .footer {
+      display: flex;
+      flex: initial;
+    }
+    > .list-wrapper {
+      display: flex;
+      flex-direction: row;
+      flex: auto;
 
-// #region Animations
-// Card sort animation
-.vs-kanban-cdk-drop-list-dragging .vs-kanban-cdk-drag {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-// Card drop animation
-.vs-kanban-cdk-drag-animating {
-  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
-}
+      $list-min-width: 250px;
+      $list-container-gap: 10px;
+      > .list-container {
+        display: flex;
+        flex: auto;
+        min-width: $list-min-width;
+        padding-right: $list-container-gap;
+        &:not(:first-of-type) {
+          border-left: 2px dashed $list-border-color;
+          padding-left: $list-container-gap;
+          padding-right: $list-container-gap;
+        }
+        > vs-kanban-list {
+          min-width: $list-min-width;
+        }
+      }
+    }
+  }
 
-// #endregion Animations
+  // #region Animations
+  // Card sort animation
+  .cdk-drop-list-dragging .cdk-drag {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+  // Card drop animation
+  .cdk-drag-animating {
+    transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  // #endregion Animations
+}
