--- a/src/app/kanban/kanban-list/kanban-list.component.html
+++ b/src/app/kanban/kanban-list/kanban-list.component.html
@@ -3,15 +3,15 @@
     [ngTemplateOutletContext]="{list: list}">
   </ng-template>
 </div>
-<cdk-virtual-scroll-viewport *ngIf="dataSource && !isLoading" [itemSize]="cardSize" class="content"
+<cdk-virtual-scroll-viewport #viewport *ngIf="dataSource && !isLoading" [itemSize]="cardSize" class="content"
   [id]="list.id || list.title" cdkDropList [cdkDropListData]="list" (cdkDropListDropped)="dropCard($event)">
   <!-- 
     # TODO Added in Angular 8
     [cdkDragStartDelay]="cardDragDelay"
   -->
-  <div *cdkVirtualFor="let card of dataSource; trackBy: cardTrackBy" cdkDrag [cdkDragData]="card"
-    class="vs-kanban-placeholder" [ngClass]="{'draggable': !card || card.canMove}"
-    [cdkDragDisabled]="card && !card.canMove">
+  <div *cdkVirtualFor="let card of dataSource; trackBy: cardTrackBy" cdkDrag
+    [cdkDragData]="{card: card, viewport: viewport}" class="vs-kanban-placeholder"
+    [ngClass]="{'draggable': !card || card.canMove}" [cdkDragDisabled]="card && !card.canMove">
     <ng-container *ngIf="cardDragPlaceholderTemplate">
       <div class="vs-kanban-placeholder" *cdkDragPlaceholder>
         <ng-template [ngTemplateOutlet]="cardDragPlaceholderTemplate" [ngTemplateOutletContext]="{card: card}">
