--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,9 +1,9 @@
 <mat-form-field [hintLabel]="hintLabel">
-    <!-- (blur)="onBlur($event)" (click)="onClick($event)" (focus)="onFocus($event)" (keyup.enter)="onKeyEnter($event)" -->
     <input #input matInput [(ngModel)]="_value" (ngModelChange)="modelValueChange($event)" [type]="type"
         [placeholder]="placeholder" [required]="required" [disabled]="disabled" [readonly]="readonly"
         [matTooltip]="tooltip" [matTooltipPosition]="tooltipPosition" [mask]="currentMask"
         [showMaskTyped]="showMaskTyped" [dropSpecialCharacters]="showMaskTyped || dropSpecialCharacters"
-        [maxlength]="_maxLength">
+        [maxlength]="_maxLength" [ngClass]="classes" (blur)="blurEvent.emit()" (click)="clickEvent.emit()"
+        (focus)="focusEvent.emit()" (keyup.enter)="keyEnterEvent.emit()">
     <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
 </mat-form-field>
