--- a/src/app/examples/examples.component.html
+++ b/src/app/examples/examples.component.html
@@ -1,4 +1,7 @@
 <mat-tab-group>
+  <mat-tab label="Loader">
+    <app-example-loader></app-example-loader>
+  </mat-tab>
   <mat-tab label="Input">
     <app-example-input></app-example-input>
   </mat-tab>
