--- a/src/app/examples/examples.component.html
+++ b/src/app/examples/examples.component.html
@@ -1,4 +1,7 @@
 <mat-tab-group>
+  <mat-tab label="Button">
+    <app-example-button></app-example-button>
+  </mat-tab>
   <mat-tab label="Loader">
     <app-example-loader></app-example-loader>
   </mat-tab>
@@ -7,8 +10,5 @@
   </mat-tab>
   <mat-tab label="Kanban">
     <app-example-kanban></app-example-kanban>
-  </mat-tab>
-  <mat-tab label="Button">
-    TODO
   </mat-tab>
 </mat-tab-group>
