--- a/src/app/workflow/workflow.component.html
+++ b/src/app/workflow/workflow.component.html
@@ -1,2 +1,2 @@
 <app-workflow-item [item]="item" *ngFor="let item of items"></app-workflow-item>
-<app-workflow-placeholder></app-workflow-placeholder>
+<app-workflow-item [isPlaceholder]="true" [item]="itemPlaceholder"></app-workflow-item>
