--- a/src/app/workflow/workflow-item/workflow-item.component.html
+++ b/src/app/workflow/workflow-item/workflow-item.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container" [class.placeholder]="isPlaceholder">
   <div class="workflow-icon-container">
-    <h3 class="workflow-icon">
+    <h3 class="workflow-icon" [style.background-color]="item.iconBackgroundColor" (click)="iconClicked.emit()" matRipple
+      [matRippleDisabled]="!isPlaceholder">
       {{item?.icon}}
     </h3>
   </div>
