--- a/src/app/workflow/workflow-item/workflow-item.component.html
+++ b/src/app/workflow/workflow-item/workflow-item.component.html
@@ -1,19 +1,15 @@
-<div class="container" [class.placeholder]="isPlaceholder">
+<div *ngIf="item" class="container" [ngClass]="{'placeholder': item.isPlaceholder, active: item.isActive}">
   <div class="workflow-icon-container">
-    <h3 class="workflow-icon" [style.background-color]="item.iconBackgroundColor" (click)="iconClicked.emit()" matRipple
-      [matRippleDisabled]="!isPlaceholder">
+    <button class="workflow-icon" matRipple [matRippleDisabled]="!item.isPlaceholder"
+      [style.background-color]="item.iconBackgroundColor" (click)="item.iconCallback && item.iconCallback(item)">
       {{item?.icon}}
-    </h3>
+    </button>
   </div>
   <div class="info">
     <div class="header">
-      <h3>{{item?.header}}</h3>
+      <h3 class="text" (click)="item.titleCallback && item.titleCallback(item)">{{item?.title}}</h3>
     </div>
-    <div class="body">
-      {{item?.body}}
-    </div>
-    <div class="footer">
-      {{item?.footer}}
-    </div>
+    <div class="body">{{item?.body}}</div>
+    <div class="footer">{{item?.footer}}</div>
   </div>
 </div>
